css/styles.css
/* ... */
.bottom-footer p {
	color: white;
}

.bottom-footer a:visited {
	color: #0000FF;
}

.calendar {
	display: flex;
	margin-left: 9%;
	margin-right: 35%;
	margin-top: 6%
}

.calendar-pro-links {
	display: flex;
	justify-content: space-evenly;
	margin-bottom: 1%;
	margin-top: 1%;
	width: 100%;
}


.category-links {
	display: flex;
	margin-left: 10%;
}

.checkout {
	margin-left: 25%;
	margin-right: 25%;
	margin-top: 6%;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
}

.col {
	flex: 1;
}

.col-large {
	margin: 1%;
}

.col-small {
	flex: 0.3;
}

.contact {
	line-height: 26px;
    color: #25787F;
    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	text-align: left;
	font-size: 14px;
	word-wrap: break-word;
}

.contact-form {
	margin: 25%;
	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
	color: #6B6B6B;
	line-height: 20px;
}

.contact-form input, .contact-form textarea {
	min-height: 14px;
    font-style: italic;
    font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
    width: 328px;
    color: #C4C4C4;
    padding: 6px;
    background-color: #dcdfe5;
    margin-bottom: 6px;
}

.contact-text {
    color: #000000;
    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    margin-right: 25%;
    margin-left: 25%;
    width: 65%;
}

.countdown {
	display: flex;
}

.fees {
	line-height: 14px;
    color: #7F7F7F;
    font-size: 12px;
    display: flex;
    justify-content: flex-start;
    margin-left: 20%;
    flex-wrap: wrap;
}

.forgot {
	margin-left: 35%;
}

.forgot input {
	width: 50%;
	margin-bottom: 5%;
}

.header {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
}

.headline {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	font-feature-settings: liga;
	font-size: 30px;
}

.headline-form {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	display: flex;
	justify-content: flex-start;
	font-size: 18px;
	margin-left: 20%
}

.headline-join {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	font-size: 30px;
	color: white;
	display: flex;
	justify-content: center;
}

.headline-partners {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	font-size: 30px;
	display: flex;
	justify-content: center;
}

.headline-questions {
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	font-size: 60px;
	display: flex;
	justify-content: center;
	color: white;
}

.home-text {
	display: flex;
	justify-content: center;
	width: 50%;
	flex-direction: column;
	margin-left: 20%;
	line-height: 150%;
}

.icon-img {
	width: 75%;
	display: flex;
	justify-content: space-evenly;
}

.icons-join {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    padding: 10px;
    top: 32%;
    left: 58%;
    display: inline-flex;
    flex-direction: row;
    width: 40.5%;
    justify-content: center;
}

.icons-join img {
	height: 20%;
	width: 20%;
}

.icon-options {
	display: flex;
	flex-direction: row;
	justify-content: center;
	padding-top: 10px;
	padding-bottom: 10px;
	flex-wrap: wrap;
}

.icon-options img {
	height: 102%; 
	width: 65%;
	margin-left: 19%;
}

.icon-text {
	width: 92%;
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
	font-size: 14px;
	color: black;
	font-weight: 900;
	font-family: arial, sans-serif;
}

.icon-text-join {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    padding: 10px;
    top: 48%;
    left: 58%;
    display: inline-flex;
    flex-direction: row;
    width: 40.5%;
    justify-content: space-around;
}

.image {
	position: relative;
	width: 100%;
}

.image p {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	top: 23%;
	left: 56%;
	width: 41.5%;
	height: 34%;
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 20px;
    padding: 10px;
}

.image-container {
	position: relative;
	width: 100%;
}

.image-join p {
	position: absolute;
	background-color: rgba(255,139,4, 0.7); 
	overflow-wrap: break-word; 
	color: white;
	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
    font-size: 16px;
    padding: 10px;
    top: 12%;
    left: 58%;
}

.image-join img {
	height: 95px;
	width: 117px;
}

.info {
	background-color: rgb(33,120,128);
	color: white;
	width: 5.5%;
	height: 4%;
	padding: 1%;
	text-decoration: none; 
	font-family: arial, sans-serif;
	text-transform: uppercase;
	margin-left: 25%;
	position: absolute;
	top: 64%;
	left: 48%;
	font-size: 16px;
	font-weight: 900;
}

.join {
 	background-color: rgba(255,139,4, 0.7);
 	margin-right: 25%;
 	margin-left: 25%; 
 }

 .join-pros {
 	display: flex;
 	justify-content: space-around;
 	flex-direction: row;
  }

.links {
	padding: 10px;
	color: rgb(33,120,128);
	text-transform: uppercase;
	font-size: 12px;
	font-family: arial, sans-serif;
	font-weight: 400;
}

.links-bottom {
	padding: 10px;
	color: rgb(33,120,128);
	text-transform: uppercase;
	font-size: 12px;
	font-family: arial, sans-serif;
	font-weight: 400;
	display: flex;
	justify-content: space-around;
	margin-left: 25%;
	margin-right: 25%;
}

.links a, .links-bottom a {
	color: rgb(33,120,128); 
	text-decoration: none;
}

.links a:visited, .links-bottom a:visited {
	color: rgb(33,120,128);
	text-decoration: none;
}

.links, .links-bottom a:hover {
	color: lightgray;
}

#login, #login a:visited {
	color: rgb(253,139,4);
	font-weight: 600;
}

.login-form input {
	padding: 5px;
    border: 5px;
    border-color: black;
    width: 30%;
    margin-bottom: 5%;
    background-color: lightgrey;
   	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
	text-align: left;
	font-size: 14px;
}
/* ... */

